assets/css/styles.css
.navbar>.container .navbar-brand {
	margin-left: -12px;

}

@media (max-width: 767px) {
	.navbar>.container .navbar-brand {
		margin-left: 0px;
	}
}

.navbar-nav {
	float: right;
}

body {
	padding-top: 40px;
}

.page-header {
	border-width: 0px;
	padding-bottom: 0px;
}

h2, h3, h4 {
	margin-top: 18px;
	margin-bottom: 0px;
}

.experience h2, .presentation h3, .publication h3, .skills h3 {
	display: inline;
}

.skills {
	padding-left: 0px;
}

.accordion-toggle, .accordion-toggle:hover, .accordion-toggle:focus {
	color: #5bc0de;
	text-decoration: none;
	font-size: 24px;
}

#footer svg{
	margin-left: 16px;
	width: 16px;
}

